force-app/main/default/objects/Customer_History__c/Customer_History__c.object-meta.xml
<CustomObject>
    <label>Customer History</label>
    <nameField>
        <label>Customer History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>