force-app/main/default/objects/Customer_History__c/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <label>Latest Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>