force-app/main/default/objects/Customer_History__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Customer_Extend__c</fullName>
            </value>
            <value>
                <fullName>Customer_Banks__c</fullName>
            </value>
            <value>
                <fullName>Customer_Extend_Tax_category__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>