force-app/main/default/objects/Customer_History__c/fields/Record_Body__c.field-meta.xml
<CustomField>
    <fullName>Record_Body__c</fullName>
    <label>Record Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>